--- a/app.css
+++ b/app.css
@@ -149,7 +149,7 @@ aside {
 /* Article Cosplay */
 
 article {
-  padding-top: 4rem;
+  padding-top: 2rem;
   padding-bottom: 4rem;
 }
 
@@ -165,13 +165,6 @@ article {
   text-align: center;
 }
 
-.card-content p {
-  text-align: center;
-  margin-bottom: 50px;
-  font-size: 20px;
-  color: #3C2A21;
-}
-
 .card {
   display: flex;
   flex: 1;
@@ -182,25 +175,24 @@ article .card {
   padding-top: 65px;
 }
 
-.card .card-content img {
-  height: 250px;
-  border-radius: 15%;
-}
-
-.card .card-content:hover {
-  transform: scale(1.15);
-}
-
 label {
   display: inline-block;
   width: 120px;
   font-weight: bold;
+  font-weight: bold;
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+.card li {
+  margin-bottom: 15px;
 }
 
 .card ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 /* Aside */
